# qduck

./: .gitignore  LICENSE  MANIFEST.in  NOTICE  PKG-INFO  README.md  pyproject.toml
.github/workflows/: tests.yml
examples/: __init__.py  client.py  file_roundtrip.py  folder_roundtrip.py  roundtrip.py  server.py  simple_blob.py  simple_file.py
qduck/: __init__.py  api.py  blob.py  cli.py  crypto.py  derive.py  exceptions.py  file_format.py  keys.py
tests/: test_api_surface.py  test_blob_roundtrip.py  test_file_corruption.py  test_folder_roundtrip.py  test_large_blob.py  test_roundtrip.py  test_tamper_failure.py
