[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qduck"
version = "0.2.0"
description = "A small X25519 + ML-KEM-768 hybrid encryption toolkit."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [
  { name = "Rick Harold" }
]
dependencies = [
  "cryptography>=47.0.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8"
]

[project.scripts]
qduck-keygen = "qduck.cli:main"

[tool.setuptools.packages.find]
include = ["qduck*"]


[project.urls]
Homepage = "https://github.com/rickharold1900/qduck"
Repository = "https://github.com/rickharold1900/qduck"
