[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qduck"
version = "0.2.4"
description = "Simple hybrid post-quantum file and blob encryption for Python."
readme = "README.md"
requires-python = ">=3.10" 
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
authors = [
  { name = "Rick Harold" }
]
dependencies = [
  "cryptography>=48.0.0"
]
keywords = ["encryption", "post-quantum", "ml-kem", "x25519", "aes-gcm"]
classifiers = [
  "Development Status :: 3 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Security :: Cryptography",
]

[project.optional-dependencies]
dev = [
  "pytest>=8"
]

[project.scripts]
qduck-keygen = "qduck.cli:main"

[tool.setuptools.packages.find]
include = ["qduck*"]


[project.urls]
Homepage = "https://github.com/rharold1900/qduck"
Repository = "https://github.com/rharold1900/qduck"
Issues = "https://github.com/rharold1900/qduck/issues"
